--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -16,6 +16,7 @@
     {January 2017 - Present} % Date(s)
     {
       \begin{cvitems}
+        \item {Responsible for managing team of 5 students, including one full-time co-op}
         \item {Developed firmware for vehicle ECUs managing low and high voltage batteries, and controlling motors}
         \item {Implemented Battery Monitoring System (BMS) ensuring cell voltages and temperatures remain within safe limits}
         \item {Developped balance charging algorithm safely coordinating charging using HV charger and BMS}
@@ -55,9 +56,9 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed, assembled, and developed software for control board to stabilize the flight of a quadcopter}
         \item {Created schematics and PCB layout for board which included an ARM-Cortex M4 processor and multiple MEMS IMU sensors}
-        \item {Developed control software, using FreeRTOS, to stabilize quadcopter flight by controlling motor speeds based on sensor input}
-        \item {Implemented sensor fusion algorithm to combine sensor inputs and cascaded PID control to perform quadcopter auto levelling}
-        \item {Developed asynchronous reading of sensors over I\textsuperscript{2}C using DMA, reducing CPU load and allowing faster control loop frequency}
+        %\item {Developed control software, using FreeRTOS, to stabilize quadcopter flight by controlling motor speeds based on sensor input}
+        %\item {Implemented sensor fusion algorithm to combine sensor inputs and cascaded PID control to perform quadcopter auto levelling}
+        %\item {Developed asynchronous reading of sensors over I\textsuperscript{2}C using DMA, reducing CPU load and allowing faster control loop frequency}
       \end{cvitems}
     }
 
