--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -30,7 +30,7 @@
     \cvskillcol{\item C, C++, Python, Matlab, Assembler, TCL, Perl
                 \item Embedded Development: device drivers and firmware
                 \item Real Time Operating Systems
-                \item Control Algorithms
+                \item Digital Controls (PID, State-Space)
                 \item Display Drivers, EFI
                     }
                 {\item ARM-Cortex M, AVR Microcontrollers
@@ -38,7 +38,7 @@
                  \item Power Electronics including inverters, regulators, and rectifiers
                  \item I\textsuperscript{2}C, SPI, SD SPI, UART, CAN protocols}
                 {\item Altium, Eagle, LTSPICE, Vector CANdb++
-                 \item Oscilloscopes, Function Generators, DMMs, Logic Analyzer
+                 \item Oscilloscope, Function Generator, DMM, Logic Analyzer
                  \item Git, SVN, CVS
                  \item Unix, Shell Scripting, GNU Make
                  \item GoogleTest Unit Test Framework}
