--- a/resume.tex
+++ b/resume.tex
@@ -54,10 +54,10 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Richard}{Matthews}
-\position{University of Waterloo 4A Mechatronics Engineering, Class of 2020}
+\position{University of Waterloo 4B Mechatronics Engineering, Class of 2020}
 %\address{Ottawa, Ontario}
 
-\mobile{(+1) 613-832-4373}
+\mobile{(+1) 613-804-4373}
 %\email{richard.arnold.matthews@gmail.com}
 \email{r4matthe@edu.uwaterloo.ca}
 \github{Rich143}
