--- a/resume.tex
+++ b/resume.tex
@@ -54,12 +54,12 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Richard}{Matthews}
-\position{University of Waterloo 4B Mechatronics Engineering, Class of 2020}
+\position{University of Waterloo | Mechatronics Engineering | Graduating April 2020}
 %\address{Ottawa, Ontario}
 
 \mobile{(+1) 613-804-4373}
-%\email{richard.arnold.matthews@gmail.com}
-\email{r4matthe@edu.uwaterloo.ca}
+\email{richard.arnold.matthews@gmail.com}
+%\email{r4matthe@uwaterloo.ca}
 \github{Rich143}
 \linkedin{richardmatthews1}
 % \gitlab{gitlab-id}
@@ -67,9 +67,9 @@
 % \twitter{@twit}
 % \skype{skype-id}
 % \reddit{reddit-id}
-% \extrainfo{extra informations}
+ %\extrainfo{English, French (working proficiency)}
 
-%\quote{``Be the change that you want to see in the world."}
+\quote{Languages: English (fluent), French (working proficiency)}
 
 
 %-------------------------------------------------------------------------------
