--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -10,16 +10,16 @@
 \begin{cventries}
 %---------------------------------------------------------
   \cventrytwo
-    {Firmware Lead, 2019 Vehicle Firmware} % Organization
     {Waterloo Formula Electric} % Organization
+    {Firmware Lead} % Organization
     {} % Location
     {January 2017 - Present} % Date(s)
     {
       \begin{cvitems}
-        \item {Responsible for managing team of 5 students, including one full-time co-op}
+        \item {Selected to plan and lead implementation of 2019/20 vehicle firmware, managing team of 5 students, including one full-time intern}
         \item {Developed firmware for vehicle ECUs managing low and high voltage batteries, and controlling motors}
         \item {Implemented Battery Monitoring System (BMS) ensuring cell voltages and temperatures remain within safe limits}
-        \item {Developped balance charging algorithm safely coordinating charging using HV charger and BMS}
+        \item {Developed balance charging algorithm for safely coordinating charging using HV charger and BMS}
         \item {Implemented driver for LTC6811 battery monitor chip, communicating over Isolated SPI bus}
         \item {Created python script to generate C code for sending and receiving CAN messages based on message and defect code database}
         %\item {Responsible for design and implementation of firmware for 2018 vehicle}
@@ -48,8 +48,8 @@
 
 %---------------------------------------------------------
   \cventry
+    {Personal interest project} % Organization
     {Quadcopter Flight Controller} % Job title
-    {} % Organization
     {} % Location
     {July 2017 - December 2017} % Date(s)
     {
