--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -27,7 +27,8 @@
                 %{\tabitem Altium, Eagle, LTSPICE \newline
                  %\tabitem Oscilloscopes, Function Generators, DMMs, Logic Analyzer \newline
                  %\tabitem Git, SVN, CVS}
-    \cvskillcol{\item C, C++, Python, Matlab, Assembler, TCL, Perl
+    %\cvskillcol{\item C, C++, Python, Matlab, Assembler, TCL, Perl
+    \cvskillcol{\item C, C++, Python, Matlab, Assembler
                 \item Embedded Development: device drivers and firmware
                 \item Real Time Operating Systems
                 \item Digital Controls (PID, State-Space)
@@ -37,7 +38,7 @@
                  \item Schematic capture, PCB Layout, Assembly and Rework
                  \item Power Electronics including inverters, regulators, and rectifiers
                  \item I\textsuperscript{2}C, SPI, SD SPI, UART, CAN protocols}
-                {\item Altium, Eagle, LTSPICE, Vector CANdb++
+                {\item Altium, LTSPICE, Vector CANdb++
                  \item Oscilloscope, Function Generator, DMM, Logic Analyzer
                  \item Git, SVN, CVS
                  \item Unix, Shell Scripting, GNU Make
