--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -16,11 +16,11 @@
     {January 2017 - Present} % Date(s)
     {
       \begin{cvitems}
-        \item {Selected to plan and lead implementation of 2019/20 vehicle firmware, managing team of 5 students, including one full-time intern}
+        \item {Selected to plan and lead implementation of 2019/20 vehicle firmware, managing team of 10 students, including 2 full-time interns}
         \item {Developed firmware for vehicle ECUs managing low and high voltage batteries, and controlling motors}
         \item {Implemented Battery Monitoring System (BMS) ensuring cell voltages and temperatures remain within safe limits}
         \item {Developed balance charging algorithm for safely coordinating charging using HV charger and BMS}
-        \item {Implemented driver for LTC6811 battery monitor chip, communicating over Isolated SPI bus}
+        \item {Implemented driver for LTC6811 battery monitor chip, communicating over isolated SPI bus}
         \item {Created python script to generate C code for sending and receiving CAN messages based on message and defect code database}
         %\item {Responsible for design and implementation of firmware for 2018 vehicle}
         %\item {Created state machines documenting desired behaviour of all vehicle electrical control units (ECUs)}
